--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -2,12 +2,15 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "CommonJS",
-    "moduleResolution": "node",
+    "lib": ["ES2020"],
+    "strict": true,
     "esModuleInterop": true,
-    "strict": false,
     "skipLibCheck": true,
-    "outDir": "./dist",
-    "rootDir": "."
+    "forceConsistentCasingInFileNames": true,
+    "outDir": "../dist",
+    "rootDir": ".",
+    "moduleResolution": "node",
+    "resolveJsonModule": true
   },
   "include": ["./**/*.ts"],
   "exclude": ["node_modules"]
